添加“返回顶部”按钮

--- a/src/assets/css/main.less
+++ b/src/assets/css/main.less
@@ -1,6 +1,7 @@
 :root {
     font-size: 16px;
     --color-primary: #1E88E5;
+    --color-green: #4CAF50;
 }
 
 // 滚动条
@@ -26,6 +27,7 @@ html, body, #app {
     background-color: #FFF;
     overflow: hidden;
     user-select: none;
+    -webkit-tap-highlight-color: transparent;
 }
 
 /* Buefy */
