--- a/src/assets/css/main.less
+++ b/src/assets/css/main.less
@@ -30,6 +30,37 @@ html, body, #app {
     -webkit-tap-highlight-color: transparent;
 }
 
+.float-btn {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 2.25rem;
+    height: 2.25rem;
+    box-shadow:
+        0 0.15rem 0.15rem 0 rgba(0, 0, 0, 0.14),
+        0 0.2rem 0.1rem -0.15rem rgba(0, 0, 0, 0.12),
+        0 0.1rem 0.3rem 0 rgba(0, 0, 0, 0.2);
+    border-radius: 0.25rem;
+    background-color: var(--color-green);
+    color: #FFF;
+    font-size: 1rem;
+    line-height: 1;
+    cursor: pointer;
+
+    &:hover .cover {
+        opacity: 0.2;
+    }
+
+    .cover {
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        background-color: #FFF;
+        opacity: 0;
+        transition: opacity 0.25s;
+    }
+}
+
 /* Buefy */
 
 // 导航栏
