--- a/docs/.vitepress/theme/style/custom.less
+++ b/docs/.vitepress/theme/style/custom.less
@@ -1,3 +1,10 @@
+:root {
+  --vp-c-indigo-1: #1E88E5;
+  --vp-c-indigo-2: #2196F3;
+  --vp-c-indigo-3: #42A5F5;
+  --vp-c-indigo-soft: rgb(66, 165, 245, 0.14);
+}
+
 .vp-doc h2 {
   padding-top: 0;
   border-top: none;
